name:          keys
category:      Data Structures, Containers
version:       3.12
license:       BSD3
cabal-version: >= 1.6
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/keys/
bug-reports:   http://github.com/ekmett/keys/issues
copyright:     Copyright (C) 2011-2016 Edward A. Kmett
synopsis:      Keyed functors and containers
description:   Keyed functors and containers
build-type:    Simple
extra-source-files: .travis.yml CHANGELOG.markdown README.markdown

source-repository head
  type: git
  location: git://github.com/ekmett/keys.git

library
  build-depends:
    array                >= 0.3.0.2 && < 0.6,
    base                 >= 4       && < 5,
    comonad              >= 4       && < 6,
    containers           >= 0.3     && < 0.6,
    free                 >= 4       && < 5,
    hashable             >= 1.1.2.3 && < 1.3,
    semigroupoids        >= 5.1     && < 6,
    semigroups           >= 0.8.3.1 && < 1,
    tagged               >= 0.7.3   && < 1,
    transformers         >= 0.2     && < 0.6,
    transformers-compat  >= 0.3     && < 1,
    unordered-containers >= 0.2.4   && < 0.3

  if impl(ghc < 7.8)
    build-depends: void >= 0.4 && < 0.8

  if impl(ghc < 8)
    build-depends: base-orphans >= 0.5.4   && < 0.6

  exposed-modules:
    Data.Key

  ghc-options: -Wall
  hs-source-dirs: src
