name:          keys
category:      Data Structures, Containers
version:       3.12.3
license:       BSD3
cabal-version: >= 1.10
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/keys/
bug-reports:   http://github.com/ekmett/keys/issues
copyright:     Copyright (C) 2011-2016 Edward A. Kmett
synopsis:      Keyed functors and containers
description:   This package provides a bunch of ad hoc classes for accessing parts of a container.
               .
               In practice this package is largely subsumed by the
               <https://hackage.haskell.org/package/lens lens package>,
               but it is maintained for now as it has much
               simpler dependencies.

build-type:    Simple
extra-source-files: CHANGELOG.markdown README.markdown cabal.project
tested-with:   GHC == 9.6.2
             , GHC == 9.4.5
             , GHC == 9.2.8
             , GHC == 9.0.2
             , GHC == 8.10.7
             , GHC == 8.8.4
             , GHC == 8.6.5
             , GHC == 8.4.4
             , GHC == 8.2.2
             , GHC == 8.0.2
             , GHC == 7.10.3
             , GHC == 7.8.4
             , GHC == 7.6.3
             , GHC == 7.4.2

source-repository head
  type: git
  location: git://github.com/ekmett/keys.git

flag comonad
  description:
    You can disable the use of the `comonad` package using `-f-comonad`.
    .
    Disabling this is an unsupported configuration, but it may be useful for accelerating builds in sandboxes for expert users.
    .
    If disabled we will not supply instances of `Comonad`
    .
  default: True
  manual: True

flag free
  description:
    You can disable the use of the `free` package using `-f-free`.
    .
    Disabling this is an unsupported configuration, but it may be useful for accelerating builds in sandboxes for expert users.
    .
    If disabled we will not supply instances for `Cofree` or `FreeT`.
    .
  default: True
  manual: True

flag semigroupoids
  description:
    You can disable the use of the `semigroupoids` package using `-f-semigroupoids`.
    .
    Disabling this is an unsupported configuration, but it may be useful for accelerating builds in sandboxes for expert users.
  default: True
  manual: True

flag tagged
  description:
    You can disable the use of the `tagged` package using `-f-tagged`.
    .
    Disabling this is an unsupported configuration, but it may be useful for accelerating builds in sandboxes for expert users.
  default: True
  manual: True

flag unordered-containers
  description:
    You can disable the use of the `unordered-containers` package (and also its dependency `hashable`) using `-f-unordered-containers`.
    .
    Disabling this is an unsupported configuration, but it may be useful for accelerating builds in sandboxes for expert users.
  default: True
  manual: True

library
  default-language: Haskell2010
  other-extensions: CPP, FlexibleInstances, TypeOperators, TypeFamilies

  build-depends:
    array                >= 0.3.0.2 && < 0.6,
    base                 >= 4.5     && < 5,
    containers           >= 0.3     && < 0.8,
    transformers         >= 0.2     && < 0.7,
    transformers-compat  >= 0.3     && < 1

  if !impl(ghc >= 7.10)
    build-depends: void >= 0.4 && < 0.8

  if impl(ghc < 7.6)
    -- GHC.Generics lived in ghc-prim initially
    build-depends: ghc-prim == 0.2.*

  if !impl(ghc >= 8.0)
    build-depends: base-orphans >= 0.5.4 && < 0.10, semigroups >= 0.8.3.1 && < 1

  if impl(ghc >= 9.6)
    build-depends: transformers >= 0.6.1.0

  if !impl(ghc >= 9.6) && impl(ghc > 7.10)
    build-depends: foldable1-classes-compat >= 0.1 && < 0.2

  if flag(comonad)
    build-depends: comonad >= 4 && < 6

  if flag(free)
    build-depends: free >= 4 && < 6

  if flag(semigroupoids)
    build-depends: semigroupoids >= 5.2 && < 7

  if flag(tagged)
    build-depends: tagged >= 0.7.3 && < 1

  if flag(unordered-containers)
    build-depends: hashable >= 1.1.2.3 && < 1.5, unordered-containers >= 0.2.4 && < 0.3

  exposed-modules:
    Data.Key

  ghc-options: -Wall
  if impl(ghc >= 8.6)
    ghc-options: -Wno-star-is-type
  hs-source-dirs: src
